--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,17 @@
     transform: rotate(360deg);
   }
 }
+
+.root{
+  font-family: system ui;
+  background: #141414;
+  color: #fff;
+  overflow-x: hidden;
+  font-family: 'Helvetica Neue',Helvetica, Arial, sans-serif  ;
+  line-height: 1.2;
+
+}
+
+body{
+  background: rgb(36, 35, 35);
+}
